ANGLE is missing the explicit context headers https://bugs.webkit.org/show_bug.cgi?id=223470

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-03-23
Reviewed by Alexey Proskuryakov.

Source/ThirdParty/ANGLE:

Add the autogenerated .inc files for explicit context
API into the ANGLE public headers.

* ANGLE.xcodeproj/project.pbxproj:
* adjust-angle-include-paths.py:
(replace):

Source/WebCore:

* platform/graphics/angle/ANGLEHeaders.h:
Remove the hack that was needed when including ANGLE without
the explicit context headers.

Canonical link: https://commits.webkit.org/235640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274856 268f45cc-cd09-0410-ab3c-d52691b4dbfc